style.css
/* ... */
#openSettings span{
    transform: rotate(0deg);
    transition: all 0s ease-in-out;
}

#openSettings:hover span{
    transition: 0.75s;
    transform: rotate(180deg);
}

.accountInfoPFP{
    width: 40px;
    height: 40px;
    border-radius: 50%;
    border-width: 0px;
    outline-width: 0px;
    margin-left: 5px;
    margin-top: 0px;
    float: left;
}

.accountInfoText{
    margin-top: 10px;
    margin-left: 10px;
    padding-left: 0px;
    width: 150px;
    font-size: 14px;
    font-weight: 100;
    align-self: flex-start;
}

.accountInfoSecondBox{
    width: 200px;
}

.accountInfoLoggoutButtonText{
    font-size: 10px;
    color: #ffffffff;
}

::-webkit-scrollbar {
    width: 6px;
    padding: 10px;
    background: var(--light-color);
}

::-webkit-scrollbar-track {
    background: var(--darkLight-color);
}

::-webkit-scrollbar-thumb {
    background: var(--dark-color);
    border-radius: 5px;
    width: 80%;
}

::-webkit-scrollbar-thumb:hover {
    background: var(--dark-color);
}

.settings{
    display: flex;
    height: 100vh;
    width: 100vw;
    background-color: white;
    margin: 0px;
    position: absolute;
    left: 0px;
    top: 0px;
    z-index: -2;
    align-items: center;
}

.settingsMenu{
    background-color: var(--darkLight-color);
    width: 40%;
    height: 100%;
    display: flex;
    justify-content: flex-end;
    overflow-y: hidden;
    transition: 0.125s;
}

.settingsMenuItems::-webkit-scrollbar{
    right: 5px;
    width: 5px;
    display: none;
}

.settingsMenuItems:hover::-webkit-scrollbar{
    right: 5px;
    width: 5px;
    display: block;
}

.settingsContent{
    display: flex;
    flex-direction: row;
    background-color: var(--light-color);
    width: 60%;
    height: 100%;
    padding-top: 60px;
    padding-bottom: 60px;
    overflow-y: auto;
}

.mainSettingsContent{
    padding-left: 40px;
    padding-right: 40px;
    width: 700px;
    display: flex;
    flex-direction: column;
}

.settingsMenuItems{
    background-color: var(--darkLight-color);
    padding-top: 60px;
    padding-bottom: 60px;
    padding-left: 8px;
    padding-right: 8px;
    display: flex;
    align-items: center;
    flex-direction: column;
    overflow-y: auto;
}

.settingsMenuItem{
    width: 200px;
    height: 30px;
    border-radius: 5px;
    background-color: var(--darkLight-color);
    border: none;
    outline: none;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    margin-bottom: 2px;
    color: rgb(207, 207, 207);
}

.settingsMenuItemTitle{
    width: 200px;
    border-radius: 5px;
    background-color: var(--darkLight-color);
    border: none;
    outline: none;
    margin-bottom: 2px;
    color: rgb(207, 207, 207);
    font-size: 12px;
    margin-left: 5px;
    margin-bottom: 5px;
}

.settingsMenuItem:hover{
    background-color: var(--light-color);
}

.settingsMenuItem:active{
    background-color: var(--lightLight-color);
}

.settingsMenuItemText{
    font-weight: 500;
    color: rgb(207, 207, 207);
}

.settingsMenuItemGroup{
    width: 100%;
}

.settingsMenuItemGroupSeperator{
    height: 3px;
    outline: none;
    color: var(--light-color);
    background-color: var(--light-color);
    border: none;
    margin-left: 5px;
    margin-right: 15px;
    margin-bottom: 5px;
}

.settingsCloseButton{
    color: rgb(207, 207, 207);
    height: 50px;
    width: 50px;
    display: flex;
    outline: none;
    border: none;
    flex-direction: column;
    align-items: center;
    background-color: #00000000;
}

.settingsCloseButton:hover{
    color: white;
}

#settingsCloseIcon{
    font-size: 50px;
}

.settingsCloseIconText{
    color: rgb(207, 207, 207);
    font-size: 13px;
    margin: 0px;
    font-weight: 300;
}

.accountInfoViewer{
    width: 100%;
    height: 500px;
    border-radius: 20px;
}

.accountInfoViewerColorBar{
    width: 100%;
    height: 100px;
    background-color: rgb(0, 255, 0);
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

.AccountInfo{
    background-color: var(--dark-color);
    height: 400px;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

.genericInfoBar{
    display: flex;
    padding: 20px;
}

.pfp{
    border-radius: 50px;
    width: 80px;
    margin-right: 20px;
}

.loggoutButton{
    height: 20vh;
    width: 20vw;
    border-radius: 20px;
    border-width: 0px;
    background-color: var(--light-color);
    align-items: center;
    align-self: center;
    position: absolute;
    left: 40vw;
    top: 40vh;
    margin: 0px;
}

@media screen and (max-width: 1500px){
    .loginBox{
        width: 80%;
        height: 90%;
    }

    .createAccountBox{
        width: 80%;
        height: 90%;
    }

    .loginInputs{
        justify-content: center;
        width: 80%;
        height: 80%;
    }

    .loginInput{
        height: 30vh;
    }

    .useOption{
        font-size: 125%;
    }

    .loginInputs h1{
        font-size: 100px;
    }

    .loginInputs h2{
        font-size: 30px;
    }

    .loginInput{
        height: 100px;
    }

    .loginInput input{
        font-size: 30px;
    }

    .loginPageButton h1{
        font-size: 40px;
    }

    .loginInputSeperator{
        height: 20px;
        border-radius: 10px;
    }
}

@media screen and (max-height: 1100px){
    .welcomeBox{
        height: 100%;
    }
}
/* ... */

